--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,16 @@ license = Perl_5
 copyright_holder = Avishai Goldman
 copyright_year   = 2019
 abstract = FFI::Platypus bindings for libpostal
-
 version = 0.001
 
 [@Basic]
+
 [Prereqs]
 FFI::Platypus = 0
 Exporter::Tiny = 0
+; authordep Pod::Elemental::Transformer::List
+
+[Prereqs / TestRequires ]
+Test2::Suite = 0
+
+[PodWeaver]
