Got expansions working, got some tests up, and some docs in! Eventually gonna get that high-level interface

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ version = 0.001
 [Prereqs]
 FFI::Platypus = 0
 Exporter::Tiny = 0
+FFI::Platypus::Record::StringArray = 0
 ; authordep Pod::Elemental::Transformer::List
 
 [Prereqs / TestRequires ]
