Implemented address parser. Find out about freeing the pointers

--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,8 @@ license = Perl_5
 copyright_holder = Avishai Goldman
 copyright_year   = 2019
 abstract = FFI::Platypus bindings for libpostal
-version = 0.001
 
-[@Basic]
+[@Starter::Git]
 
 [Prereqs]
 FFI::Platypus = 0
@@ -18,3 +17,6 @@ FFI::Platypus::Record::StringArray = 0
 Test2::Suite = 0
 
 [PodWeaver]
+
+[RewriteVersion]
+[BumpVersionAfterRelease]
