add missing prereq

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ abstract = FFI::Platypus bindings for libpostal
 FFI::Platypus = 0
 Exporter::Tiny = 0
 FFI::Platypus::Record::StringArray = 0
+Encode::Simple = 0
 ; authordep Pod::Elemental::Transformer::List
 
 [Prereqs / TestRequires ]
