update some prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = FFI-Postal
 author  = Avishai Goldman <veesh@cpan.org>
 license = Perl_5
 copyright_holder = Avishai Goldman
-copyright_year   = 2019
+copyright_year   = 2019-2020
 abstract = FFI::Platypus bindings for libpostal
 
 [@Starter::Git]
@@ -10,6 +10,7 @@ abstract = FFI::Platypus bindings for libpostal
 [Prereqs]
 FFI::Platypus = 0
 Exporter::Tiny = 0
+Try::Tiny = 0
 FFI::Platypus::Record::StringArray = 0
 Encode::Simple = 0
 ; authordep Pod::Elemental::Transformer::List
