--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 6.017, CPAN::Meta::Converter version 2.150010'
+generated_by: 'Dist::Zilla version 6.012, CPAN::Meta::Converter version 2.150010'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -54,10 +54,11 @@ requires:
   Exporter::Tiny: '0'
   FFI::Platypus: '0'
   FFI::Platypus::Record::StringArray: '0'
+  Try::Tiny: '0'
 version: '0.003'
 x_Dist_Zilla:
   perl:
-    version: '5.032000'
+    version: '5.026001'
   plugins:
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
@@ -73,19 +74,19 @@ x_Dist_Zilla:
         Dist::Zilla::Plugin::Git::GatherDir:
           include_untracked: 0
       name: '@Starter::Git/Git::GatherDir'
-      version: '2.047'
+      version: '2.046'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Starter::Git/MetaYAML'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: '@Starter::Git/MetaJSON'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Starter::Git/License'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::Pod2Readme
       name: '@Starter::Git/Pod2Readme'
@@ -93,11 +94,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: '@Starter::Git/PodSyntaxTests'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::Test::ReportPrereqs
       name: '@Starter::Git/Test::ReportPrereqs'
-      version: '0.028'
+      version: '0.027'
     -
       class: Dist::Zilla::Plugin::Test::Compile
       config:
@@ -122,19 +123,19 @@ x_Dist_Zilla:
         Dist::Zilla::Role::TestRunner:
           default_jobs: 1
       name: '@Starter::Git/MakeMaker'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Starter::Git/Manifest'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Starter::Git/PruneCruft'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Starter::Git/ManifestSkip'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::RunExtraTests
       config:
@@ -154,10 +155,10 @@ x_Dist_Zilla:
           allow_dirty_match: []
           changelog: Changes
         Dist::Zilla::Role::Git::Repo:
-          git_version: 2.7.4
+          git_version: 2.17.1
           repo_root: .
       name: '@Starter::Git/Git::Check'
-      version: '2.047'
+      version: '2.046'
     -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
@@ -165,7 +166,6 @@ x_Dist_Zilla:
           add_files_in:
             - /
           commit_msg: '%v%n%n%c'
-          signoff: '0'
         Dist::Zilla::Role::Git::DirtyFiles:
           allow_dirty:
             - Changes
@@ -173,12 +173,12 @@ x_Dist_Zilla:
           allow_dirty_match: []
           changelog: Changes
         Dist::Zilla::Role::Git::Repo:
-          git_version: 2.7.4
+          git_version: 2.17.1
           repo_root: .
         Dist::Zilla::Role::Git::StringFormatter:
           time_zone: local
       name: '@Starter::Git/Release_Commit'
-      version: '2.047'
+      version: '2.046'
     -
       class: Dist::Zilla::Plugin::Git::Tag
       config:
@@ -190,12 +190,12 @@ x_Dist_Zilla:
           tag_format: '%v'
           tag_message: '%v'
         Dist::Zilla::Role::Git::Repo:
-          git_version: 2.7.4
+          git_version: 2.17.1
           repo_root: .
         Dist::Zilla::Role::Git::StringFormatter:
           time_zone: local
       name: '@Starter::Git/Git::Tag'
-      version: '2.047'
+      version: '2.046'
     -
       class: Dist::Zilla::Plugin::Git::Push
       config:
@@ -204,30 +204,30 @@ x_Dist_Zilla:
             - origin
           remotes_must_exist: 1
         Dist::Zilla::Role::Git::Repo:
-          git_version: 2.7.4
+          git_version: 2.17.1
           repo_root: .
       name: '@Starter::Git/Git::Push'
-      version: '2.047'
+      version: '2.046'
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Starter::Git/TestRelease'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Starter::Git/ConfirmRelease'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Starter::Git/UploadToCPAN'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: '@Starter::Git/MetaConfig'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::MetaNoIndex
       name: '@Starter::Git/MetaNoIndex'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::MetaProvides::Package
       config:
@@ -236,7 +236,7 @@ x_Dist_Zilla:
             -
               class: Dist::Zilla::Plugin::FinderCode
               name: '@Starter::Git/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-              version: '6.017'
+              version: '6.012'
           include_underscores: 0
         Dist::Zilla::Role::MetaProvider::Provider:
           $Dist::Zilla::Role::MetaProvider::Provider::VERSION: '2.002004'
@@ -244,18 +244,18 @@ x_Dist_Zilla:
           inherit_version: '0'
           meta_noindex: '1'
         Dist::Zilla::Role::ModuleMetadata:
-          Module::Metadata: '1.000037'
+          Module::Metadata: '1.000033'
           version: '0.006'
       name: '@Starter::Git/MetaProvides::Package'
       version: '2.004003'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Starter::Git/ShareDir'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Starter::Git/ExecDir'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -263,7 +263,7 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -271,7 +271,7 @@ x_Dist_Zilla:
           phase: test
           type: requires
       name: TestRequires
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::PodWeaver
       config:
@@ -384,59 +384,58 @@ x_Dist_Zilla:
           release_branch: ~
           release_message: 'Build results of %h (on %b)'
         Dist::Zilla::Role::Git::Repo:
-          git_version: 2.7.4
+          git_version: 2.17.1
           repo_root: .
       name: Git::CommitBuild
-      version: '2.047'
+      version: '2.046'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExtraTestFiles'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':PerlExecFiles'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':AllFiles'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':NoFiles'
-      version: '6.017'
+      version: '6.012'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: '@Starter::Git/MetaProvides::Package/AUTOVIV/:InstallModulesPM'
-      version: '6.017'
+      version: '6.012'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: '0'
-    version: '6.017'
-x_generated_by_perl: v5.32.0
+    version: '6.012'
+x_generated_by_perl: v5.26.1
 x_serialization_backend: 'YAML::Tiny version 1.73'
-x_spdx_expression: 'Artistic-1.0-Perl OR GPL-1.0-or-later'
