--- a/dist.ini
+++ b/dist.ini
@@ -13,10 +13,12 @@ Exporter::Tiny = 0
 Try::Tiny = 0
 FFI::Platypus::Record::StringArray = 0
 Encode::Simple = 0
+Import::Into = 0
 ; authordep Pod::Elemental::Transformer::List
 
 [Prereqs / TestRequires ]
-Test2::Suite = 0
+Test2::V0 = 0
+Test::LeakTrace = 0
 
 [PodWeaver]
 
