Build results of 12b496b (on master)

--- a/META.yml
+++ b/META.yml
@@ -5,7 +5,8 @@ author:
 build_requires:
   ExtUtils::MakeMaker: '0'
   File::Spec: '0'
-  Test2::Suite: '0'
+  Test2::V0: '0'
+  Test::LeakTrace: '0'
   Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
@@ -54,6 +55,7 @@ requires:
   Exporter::Tiny: '0'
   FFI::Platypus: '0'
   FFI::Platypus::Record::StringArray: '0'
+  Import::Into: '0'
   Try::Tiny: '0'
 version: '0.004'
 x_Dist_Zilla:
