Added some documentation
Added some documentation and a missing prerequisite

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,7 @@ Import::Into = 0
 [Prereqs / TestRequires ]
 Test2::V0 = 0
 Test::LeakTrace = 0
+Test2::Harness::Runner::Preload = 0
 
 [PodWeaver]
 
